refactor: method 책임 분리